sparta ToolsAPI: Delphi compatible ToolsAPI/DesignIDE interface at XE2 level (proxy for IDEIntf). Initial commit (no functionality yet), just interfaces and classes without implementation:
designeditors.pas:
-TComponentEditor

designintf.pas:
-Interfaces: IEventInfo, IClass, IActivatable, IDesignObject, IDesignPersistent, IDesignerSelections, IDesigner60, IDesigner70, IDesigner80, IDesigner100, IDesigner, IComponentEditor
-TBaseComponentEditor
-RegisterComponentEditor

designmenus.pas:
-Interfaces: IMenuItems, IMenu, IMainMenu, IPopupMenu, IMenuItem

 
 

 SVN 51638@branches/free-sparta

--- a/.gitattributes
+++ b/.gitattributes
@@ -3625,6 +3625,11 @@ components/sparta/smartformeditor/source/sparta_fakeformbg.pas svneol=native#tex
 components/sparta/smartformeditor/source/sparta_reg_smartformeditor.pas svneol=native#text/pascal
 components/sparta/smartformeditor/sparta_smartformeditor.lpk svneol=native#text/plain
 components/sparta/smartformeditor/sparta_smartformeditor.pas svneol=native#text/pascal
+components/sparta/toolsapi/source/designeditors.pas svneol=native#text/pascal
+components/sparta/toolsapi/source/designintf.pas svneol=native#text/pascal
+components/sparta/toolsapi/source/designmenus.pas svneol=native#text/pascal
+components/sparta/toolsapi/sparta_toolsapi.lpk svneol=native#text/plain
+components/sparta/toolsapi/sparta_toolsapi.pas svneol=native#text/pascal
 components/sqldb/Makefile svneol=native#text/plain
 components/sqldb/Makefile.compiled svneol=native#text/plain
 components/sqldb/Makefile.fpc svneol=native#text/plain
