--- a/.gitattributes
+++ b/.gitattributes
@@ -8712,6 +8712,7 @@ tools/debugserver/frmmain.pp svneol=native#text/pascal
 tools/debugserver/frmoptions.lfm svneol=native#text/plain
 tools/debugserver/frmoptions.pp svneol=native#text/pascal
 tools/delete_non_svn_files.pl svneol=native#text/plain
+tools/find_merged_revisions.pas svneol=native#text/plain
 tools/find_missing_lpl_files.sh svneol=native#text/plain
 tools/getallpofiles.sh -text svneol=native#application/x-sh
 tools/glazres/glazres.ico -text svneol=unset#image/ico
