LCL: added Portuguese translation by Pedro Albuquerque, bug 29712
 SVN 51683@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -7569,6 +7569,7 @@ lcl/languages/lclstrconsts.nl.po svneol=native#text/plain
 lcl/languages/lclstrconsts.no.po svneol=native#text/plain
 lcl/languages/lclstrconsts.pl.po svneol=native#text/plain
 lcl/languages/lclstrconsts.po svneol=native#text/plain
+lcl/languages/lclstrconsts.pt.po svneol=native#text/plain
 lcl/languages/lclstrconsts.pt_BR.po svneol=native#text/plain
 lcl/languages/lclstrconsts.ru.po svneol=native#text/plain
 lcl/languages/lclstrconsts.sk.po svneol=native#text/plain
