ide, codetools: change ClassCompleteCode into CompleteCodeInteractive
 SVN 51859@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -5713,14 +5713,14 @@ ide/checkcompoptsfornewunitdlg.lfm svneol=native#text/plain
 ide/checkcompoptsfornewunitdlg.pas svneol=native#text/plain
 ide/checklfmdlg.lfm svneol=native#text/plain
 ide/checklfmdlg.pas svneol=native#text/pascal
-ide/chooseclasssectiondlg.lfm svneol=native#text/plain
-ide/chooseclasssectiondlg.pas svneol=native#text/plain
 ide/cleandirdlg.lfm svneol=native#text/plain
 ide/cleandirdlg.pas svneol=native#text/pascal
 ide/clipboardhistory.pas svneol=native#text/pascal
 ide/codebrowser.lfm svneol=native#text/plain
 ide/codebrowser.pas svneol=native#text/plain
 ide/codecontextform.pas svneol=native#text/plain
+ide/codecreationdlg.lfm svneol=native#text/pascal
+ide/codecreationdlg.pas svneol=native#text/pascal
 ide/codeexplopts.pas svneol=native#text/pascal
 ide/codeexplorer.lfm svneol=native#text/plain
 ide/codeexplorer.pas svneol=native#text/pascal
