Tools, GLazRes: i18n + Hungarian translation by Péter Gábor, bug 29777; also added Russian translation.
 SVN 51895@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -8722,6 +8722,9 @@ tools/glazres/glazres.lpi svneol=native#text/plain
 tools/glazres/glazres.lpr svneol=native#text/pascal
 tools/glazres/glazresmain.lfm svneol=native#text/plain
 tools/glazres/glazresmain.pp svneol=native#text/pascal
+tools/glazres/languages/glazres.hu.po svneol=native#text/plain
+tools/glazres/languages/glazres.po svneol=native#text/plain
+tools/glazres/languages/glazres.ru.po svneol=native#text/plain
 tools/iconvtable.lpi svneol=native#text/plain
 tools/iconvtable.pas svneol=native#text/plain
 tools/iconvtable_dbcs.lpi svneol=native#text/plain
