--- a/.gitattributes
+++ b/.gitattributes
@@ -6465,6 +6465,7 @@ images/menu/menu_run.png -text svneol=unset#image/png
 images/menu/menu_run_cursor.png -text svneol=unset#image/png
 images/menu/menu_run_file.png -text svneol=unset#image/png
 images/menu/menu_run_parameters.png -text svneol=unset#image/png
+images/menu/menu_run_withoutdebugging.png -text
 images/menu/menu_save_all.png -text svneol=unset#image/png
 images/menu/menu_saveas.png -text
 images/menu/menu_search_files.png -text svneol=unset#image/png
