--- a/.gitattributes
+++ b/.gitattributes
@@ -4328,6 +4328,7 @@ components/turbopower_ipro/languages/ipconst.pt_BR.po svneol=native#text/plain
 components/turbopower_ipro/languages/ipconst.ru.po svneol=native#text/plain
 components/turbopower_ipro/languages/ipconst.uk.po svneol=native#text/plain
 components/turbopower_ipro/languages/ipconst.zh_CN.po svneol=native#text/plain
+components/turbopower_ipro/languages/iphtmlpv.de.po svneol=native#text/plain
 components/turbopower_ipro/languages/iphtmlpv.fr.po svneol=native#text/plain
 components/turbopower_ipro/languages/iphtmlpv.hu.po svneol=native#text/plain
 components/turbopower_ipro/languages/iphtmlpv.it.po svneol=native#text/plain
