--- a/.gitattributes
+++ b/.gitattributes
@@ -3784,6 +3784,7 @@ components/synedit/syneditmarks.pp svneol=native#text/plain
 components/synedit/syneditmarkup.pp svneol=native#text/plain
 components/synedit/syneditmarkupbracket.pp svneol=native#text/plain
 components/synedit/syneditmarkupctrlmouselink.pp svneol=native#text/plain
+components/synedit/syneditmarkupfoldcoloring.pas svneol=native#text/pascal
 components/synedit/syneditmarkupguttermark.pp svneol=native#text/pascal
 components/synedit/syneditmarkuphighall.pp svneol=native#text/plain
 components/synedit/syneditmarkupifdef.pp svneol=native#text/pascal
