New dialog for Change Parent feature.
 SVN 52195@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1823,6 +1823,8 @@ components/ideintf/actionseditor.pas svneol=native#text/pascal
 components/ideintf/actionseditorstd.lfm svneol=native#text/plain
 components/ideintf/actionseditorstd.pas svneol=native#text/pascal
 components/ideintf/baseideintf.pas svneol=native#text/plain
+components/ideintf/changeparentdlg.lfm svneol=native#text/plain
+components/ideintf/changeparentdlg.pas svneol=native#text/pascal
 components/ideintf/checkgroupeditordlg.lfm svneol=native#text/plain
 components/ideintf/checkgroupeditordlg.pas svneol=native#text/plain
 components/ideintf/checklistboxeditordlg.lfm svneol=native#text/plain
