--- a/.gitattributes
+++ b/.gitattributes
@@ -1159,13 +1159,15 @@ components/datetimectrls/Makefile svneol=native#text/plain
 components/datetimectrls/Makefile.compiled svneol=native#text/plain
 components/datetimectrls/Makefile.fpc svneol=native#text/plain
 components/datetimectrls/calcontrolwrapper.pas svneol=native#text/pascal
-components/datetimectrls/datetimecontrolsreg.pas svneol=native#text/pascal
 components/datetimectrls/datetimectrls.lpk svneol=native#text/plain
-components/datetimectrls/datetimectrls.lrs svneol=native#text/pascal
 components/datetimectrls/datetimectrls.pas svneol=native#text/pascal
 components/datetimectrls/datetimepicker.pas svneol=native#text/pascal
-components/datetimectrls/datetimepickerpropedit.pas svneol=native#text/pascal
 components/datetimectrls/dbdatetimepicker.pas svneol=native#text/pascal
+components/datetimectrls/design/DateTimeCtrlsDsgn.lpk svneol=native#text/xml
+components/datetimectrls/design/DateTimeCtrlsDsgn.pas svneol=native#text/pascal
+components/datetimectrls/design/datetimecontrolsreg.pas svneol=native#text/pascal
+components/datetimectrls/design/datetimectrls.lrs svneol=native#text/pascal
+components/datetimectrls/design/datetimepickerpropedit.pas svneol=native#text/pascal
 components/datetimectrls/lclcalwrapper.pas svneol=native#text/pascal
 components/datetimectrls/manual.htm svneol=native#text/plain
 components/datetimectrls/pictures/DateControls01.PNG -text svneol=unset#image/png
@@ -7741,6 +7743,7 @@ packager/globallinks/codetools-1.0.1.lpl svneol=native#text/plain
 packager/globallinks/cody-1.1.lpl svneol=native#text/plain
 packager/globallinks/customdrawn-0.lpl svneol=native#text/plain
 packager/globallinks/datetimectrls-1.5.1.lpl svneol=native#text/plain
+packager/globallinks/datetimectrlsdsgn-1.5.1.lpl svneol=native#text/plain
 packager/globallinks/dbflaz-0.1.1.lpl svneol=native#text/plain
 packager/globallinks/debuggerintf-0.1.lpl svneol=native#text/plain
 packager/globallinks/demoidehelp-0.lpl svneol=native#text/plain
