LazUtils: a new test program for LazUnicode unit.
 SVN 52672@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -3030,6 +3030,8 @@ components/lazutils/lcsvutils.pas svneol=native#text/pascal
 components/lazutils/lookupstringlist.pas svneol=native#text/pascal
 components/lazutils/masks.pas svneol=native#text/pascal
 components/lazutils/paswstring.pas svneol=native#text/pascal
+components/lazutils/test/LazUnicodeTest.lpi svneol=native#text/plain
+components/lazutils/test/LazUnicodeTest.lpr svneol=native#text/pascal
 components/lazutils/test/TestLazStorageMem.lpi svneol=native#text/plain
 components/lazutils/test/TestLazStorageMem.lpr svneol=native#text/plain
 components/lazutils/test/testlazstoragememcase1.pas svneol=native#text/plain
