--- a/.gitattributes
+++ b/.gitattributes
@@ -7896,6 +7896,8 @@ packager/globallinks/sdflaz-0.1.1.lpl svneol=native#text/plain
 packager/globallinks/semaphorgridlpk-1.0.1.lpl svneol=native#text/plain
 packager/globallinks/simpleideintf-0.lpl svneol=native#text/plain
 packager/globallinks/sparta_dockedformeditor-0.lpl svneol=native#text/plain
+packager/globallinks/sparta_generics-0.lpl svneol=native#text/plain
+packager/globallinks/sparta_mdi-0.lpl svneol=native#text/plain
 packager/globallinks/sqldblaz-1.0.2.lpl svneol=native#text/plain
 packager/globallinks/sqlite3laz-0.4.lpl svneol=native#text/plain
 packager/globallinks/sqlitelaz-0.4.lpl svneol=native#text/plain
