fpvectorial: Initial version of a reader for wmf files.
 SVN 52796@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1532,6 +1532,7 @@ components/fpvectorial/fpvectorialpkg.lpk svneol=native#text/plain
 components/fpvectorial/fpvectorialpkg.pas svneol=native#text/plain
 components/fpvectorial/fpvtocanvas.pas svneol=native#text/plain
 components/fpvectorial/fpvutils.pas svneol=native#text/plain
+components/fpvectorial/fpvwmf.pas svneol=native#text/plain
 components/fpvectorial/htmlvectorialreader.pas svneol=native#text/pascal
 components/fpvectorial/lasvectorialreader.pas svneol=native#text/plain
 components/fpvectorial/lazvectorialreader.pas svneol=native#text/plain
@@ -1549,6 +1550,7 @@ components/fpvectorial/svgvectorialwriter.pas svneol=native#text/plain
 components/fpvectorial/svgzvectorialreader.pas svneol=native#text/pascal
 components/fpvectorial/tools/laszip/laszip.lpi svneol=native#text/plain
 components/fpvectorial/tools/laszip/laszip.pas svneol=native#text/plain
+components/fpvectorial/wmfvectorialreader.pas svneol=native#text/plain
 components/fpweb/README.txt svneol=native#text/plain
 components/fpweb/demo/README.txt svneol=native#text/plain
 components/fpweb/fpideexteditorinsertfilenameunit.lfm svneol=native#text/plain
