--- a/.gitattributes
+++ b/.gitattributes
@@ -1525,6 +1525,10 @@ components/fpvectorial/examples/fpvtextwritetest2.lpi svneol=native#text/plain
 components/fpvectorial/examples/fpvtextwritetest2.pas svneol=native#text/plain
 components/fpvectorial/examples/fpvwritetest.lpi svneol=native#text/plain
 components/fpvectorial/examples/fpvwritetest.pas svneol=native#text/plain
+components/fpvectorial/examples/wmf_mainform.lfm svneol=native#text/plain
+components/fpvectorial/examples/wmf_mainform.pas svneol=native#text/plain
+components/fpvectorial/examples/wmfviewer.lpi svneol=native#text/plain
+components/fpvectorial/examples/wmfviewer.lpr svneol=native#text/plain
 components/fpvectorial/fpvectbuildunit.pas svneol=native#text/plain
 components/fpvectorial/fpvectorial.pas svneol=native#text/plain
 components/fpvectorial/fpvectorial.xml svneol=native#text/plain
