--- a/.gitattributes
+++ b/.gitattributes
@@ -988,6 +988,7 @@ components/codetools/sourcelog.pas svneol=native#text/pascal
 components/codetools/stdcodetools.pas svneol=native#text/pascal
 components/codetools/tests/fdt_basic.pas svneol=native#text/plain
 components/codetools/tests/fdt_classhelper.pas svneol=native#text/plain
+components/codetools/tests/fdt_classof.pas svneol=native#text/plain
 components/codetools/tests/fdt_generics.pas svneol=native#text/plain
 components/codetools/tests/fdt_nestedclasses.pas svneol=native#text/plain
 components/codetools/tests/fdt_objccategory.pas svneol=native#text/plain
