fpvectorial: Add visual test project.
 SVN 52893@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1553,6 +1553,11 @@ components/fpvectorial/svgvectorialreader.pas svneol=native#text/plain
 components/fpvectorial/svgvectorialreader_rsvg.pas svneol=native#text/pascal
 components/fpvectorial/svgvectorialwriter.pas svneol=native#text/plain
 components/fpvectorial/svgzvectorialreader.pas svneol=native#text/pascal
+components/fpvectorial/tests/visualtest.lpi svneol=native#text/plain
+components/fpvectorial/tests/visualtest.lpr svneol=native#text/plain
+components/fpvectorial/tests/vtmain.lfm svneol=native#text/plain
+components/fpvectorial/tests/vtmain.pas svneol=native#text/plain
+components/fpvectorial/tests/vtprimitives.pas svneol=native#text/plain
 components/fpvectorial/tools/laszip/laszip.lpi svneol=native#text/plain
 components/fpvectorial/tools/laszip/laszip.pas svneol=native#text/plain
 components/fpvectorial/wmfvectorialreader.pas svneol=native#text/plain
