tests: started IDEIntf tests
 SVN 52911@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -8034,6 +8034,8 @@ test/customdrawn/lazdialogs_test.res -text
 test/customdrawn/mainform.lfm svneol=native#text/plain
 test/customdrawn/mainform.pas svneol=native#text/plain
 test/hello.ahk svneol=native#text/plain
+test/ideintf/testmenuintf.lfm svneol=native#text/plain
+test/ideintf/testmenuintf.pas svneol=native#text/plain
 test/lazutils/TestLazLogger.lpr svneol=native#text/pascal
 test/lazutils/testavglvltree.pas svneol=native#text/plain
 test/lazutils/testlazloggercase.pas svneol=native#text/pascal
