--- a/.gitattributes
+++ b/.gitattributes
@@ -3441,6 +3441,7 @@ components/printers/win32/winprndialogs.inc svneol=native#text/pascal
 components/printers/win32/winutilprn.pas svneol=native#text/pascal
 components/printers/win32/winutilprnconst.inc svneol=native#text/pascal
 components/projectgroups/README.txt svneol=native#text/plain
+components/projectgroups/languages/projectgroupstrconst.hu.po svneol=native#text/plain
 components/projectgroups/languages/projectgroupstrconst.po svneol=native#text/plain
 components/projectgroups/lazprojectgroup.pas svneol=native#text/plain
 components/projectgroups/lazprojectgroups.lpk svneol=native#text/plain
