--- a/.gitattributes
+++ b/.gitattributes
@@ -3443,6 +3443,7 @@ components/printers/win32/winutilprnconst.inc svneol=native#text/pascal
 components/projectgroups/README.txt svneol=native#text/plain
 components/projectgroups/languages/projectgroupstrconst.de.po svneol=native#text/plain
 components/projectgroups/languages/projectgroupstrconst.hu.po svneol=native#text/plain
+components/projectgroups/languages/projectgroupstrconst.it.po svneol=native#text/plain
 components/projectgroups/languages/projectgroupstrconst.po svneol=native#text/plain
 components/projectgroups/languages/projectgroupstrconst.ru.po svneol=native#text/plain
 components/projectgroups/lazprojectgroup.pas svneol=native#text/plain
