Examples, Translation: replaced .lrt files with .lrj
 SVN 52967@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -5720,17 +5720,17 @@ examples/translation/languages/translation_demo.it.po svneol=native#text/plain
 examples/translation/languages/translation_demo.po svneol=native#text/plain
 examples/translation/languages/translation_demo.ru.po svneol=native#text/plain
 examples/translation/localizedforms.lfm svneol=native#text/plain
-examples/translation/localizedforms.lrt svneol=native#text/plain
+examples/translation/localizedforms.lrj svneol=native#text/plain
 examples/translation/localizedforms.pas svneol=native#text/pascal
 examples/translation/main.lfm svneol=native#text/plain
-examples/translation/main.lrt svneol=native#text/plain
+examples/translation/main.lrj svneol=native#text/plain
 examples/translation/main.pas svneol=native#text/pascal
 examples/translation/stringsunit.pas svneol=native#text/pascal
 examples/translation/translation_demo.lpi svneol=native#text/plain
 examples/translation/translation_demo.lpr svneol=native#text/pascal
 examples/translation/translation_demo.res -text
 examples/translation/unit2.lfm svneol=native#text/plain
-examples/translation/unit2.lrt svneol=native#text/plain
+examples/translation/unit2.lrj svneol=native#text/plain
 examples/translation/unit2.pas svneol=native#text/pascal
 examples/trayicon/createbundle.sh svneol=native#text/plain
 examples/trayicon/frmtest.dfm -text
