--- a/.gitattributes
+++ b/.gitattributes
@@ -8830,6 +8830,7 @@ tools/glazres/glazres.ico -text svneol=unset#image/ico
 tools/glazres/glazres.lpi svneol=native#text/plain
 tools/glazres/glazres.lpr svneol=native#text/pascal
 tools/glazres/glazresmain.lfm svneol=native#text/plain
+tools/glazres/glazresmain.lrj svneol=native#text/plain
 tools/glazres/glazresmain.pp svneol=native#text/pascal
 tools/glazres/languages/glazres.fr.po svneol=native#text/plain
 tools/glazres/languages/glazres.hu.po svneol=native#text/plain
