IDE: added multi paste dialog like Delphi, patch 30671, from Silvio Clécio
 SVN 53064@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -6119,6 +6119,8 @@ ide/mouseactiondialog.lfm svneol=native#text/plain
 ide/mouseactiondialog.pas svneol=native#text/pascal
 ide/msgvieweditor.lfm svneol=native#text/plain
 ide/msgvieweditor.pas svneol=native#text/pascal
+ide/multipastedlg.lfm svneol=native#text/plain
+ide/multipastedlg.pas svneol=native#text/plain
 ide/multireplacedlg.lfm svneol=native#text/plain
 ide/multireplacedlg.pas svneol=native#text/pascal
 ide/newdialog.lfm svneol=native#text/plain
