--- a/.gitattributes
+++ b/.gitattributes
@@ -7817,6 +7817,8 @@ packager/adddirtopkgdlg.lfm svneol=native#text/plain
 packager/adddirtopkgdlg.pas svneol=native#text/plain
 packager/addfiletoapackagedlg.lfm svneol=native#text/plain
 packager/addfiletoapackagedlg.pas svneol=native#text/pascal
+packager/addpkgdependencydlg.lfm svneol=native#text/plain
+packager/addpkgdependencydlg.pas svneol=native#text/pascal
 packager/addtopackagedlg.lfm svneol=native#text/plain
 packager/addtopackagedlg.pas svneol=native#text/pascal
 packager/basepkgmanager.pas svneol=native#text/pascal
