--- a/.gitattributes
+++ b/.gitattributes
@@ -3964,6 +3964,7 @@ components/synedit/test/testhighlightfoldbase.pas svneol=native#text/pascal
 components/synedit/test/testhighlightmulti.pas svneol=native#text/pascal
 components/synedit/test/testhighlightpas.pas svneol=native#text/pascal
 components/synedit/test/testhighlightxml.pas svneol=native#text/pascal
+components/synedit/test/testmarkupfoldcoloring.pas svneol=native#text/pascal
 components/synedit/test/testmarkuphighall.pas svneol=native#text/pascal
 components/synedit/test/testmarkupifdef.pas svneol=native#text/pascal
 components/synedit/test/testmarkupwordgroup.pas svneol=native#text/pascal
