--- a/.gitattributes
+++ b/.gitattributes
@@ -1958,6 +1958,8 @@ components/ideintf/objectinspector.pp svneol=native#text/pascal
 components/ideintf/objinspstrconsts.pas svneol=native#text/pascal
 components/ideintf/oifavoriteproperties.pas svneol=native#text/pascal
 components/ideintf/packageintf.pas svneol=native#text/pascal
+components/ideintf/pagespropeditdlg.lfm svneol=native#text/plain
+components/ideintf/pagespropeditdlg.pas svneol=native#text/pascal
 components/ideintf/projectintf.pas svneol=native#text/pascal
 components/ideintf/projectresourcesintf.pas svneol=native#text/pascal
 components/ideintf/projpackintf.pas svneol=native#text/pascal
