--- a/.gitattributes
+++ b/.gitattributes
@@ -1046,6 +1046,7 @@ components/codetools/tests/testcth2pas.pas svneol=native#text/pascal
 components/codetools/tests/testctrangescan.pas svneol=native#text/plain
 components/codetools/tests/testctxmlfixfragments.pas svneol=native#text/pascal
 components/codetools/tests/testfinddeclaration.pas svneol=native#text/plain
+components/codetools/tests/testglobals.pas svneol=native#text/plain
 components/codetools/tests/testmethodjumptool.pas svneol=native#text/plain
 components/codetools/tests/testrefactoring.pas svneol=native#text/plain
 components/codetools/tests/teststdcodetools.pas svneol=native#text/plain
