--- a/.gitattributes
+++ b/.gitattributes
@@ -6280,6 +6280,8 @@ ide/mainbase.pas svneol=native#text/pascal
 ide/mainintf.pas svneol=native#text/pascal
 ide/makeresstrdlg.lfm svneol=native#text/plain
 ide/makeresstrdlg.pas svneol=native#text/pascal
+ide/manifestdialog.lfm svneol=native#text/plain
+ide/manifestdialog.pas svneol=native#text/pascal
 ide/miscoptions.pas svneol=native#text/pascal
 ide/modematrixopts.pas svneol=native#text/plain
 ide/mouseactiondialog.lfm svneol=native#text/plain
