--- a/.gitattributes
+++ b/.gitattributes
@@ -3848,6 +3848,7 @@ components/sqldb/design/tmysql50connection.png -text svneol=unset#image/png
 components/sqldb/design/tmysql51connection.png -text svneol=unset#image/png
 components/sqldb/design/tmysql55connection.png -text svneol=unset#image/png
 components/sqldb/design/tmysql56connection.png -text svneol=unset#image/png
+components/sqldb/design/tmysql57connection.png -text svneol=unset#image/png
 components/sqldb/design/tmysqlconnection.png -text svneol=unset#image/png
 components/sqldb/design/todbcconnection.png -text svneol=unset#image/png
 components/sqldb/design/toracleconnection.png -text svneol=unset#image/png
