--- a/.gitattributes
+++ b/.gitattributes
@@ -3290,6 +3290,8 @@ components/onlinepackagemanager/onlinepackagemanager.lpk svneol=native#text/plai
 components/onlinepackagemanager/onlinepackagemanager.lps svneol=native#text/plain
 components/onlinepackagemanager/onlinepackagemanager.pas svneol=native#text/pascal
 components/onlinepackagemanager/onlinepackagemanagerintf.pas svneol=native#text/pascal
+components/onlinepackagemanager/opkman_categoriesfrm.lfm svneol=native#text/plain
+components/onlinepackagemanager/opkman_categoriesfrm.pas svneol=native#text/pascal
 components/onlinepackagemanager/opkman_common.pas svneol=native#text/pascal
 components/onlinepackagemanager/opkman_const.pas svneol=native#text/pascal
 components/onlinepackagemanager/opkman_contributors.txt svneol=native#text/plain
