TurboPower_iPro: Register TIpHtmlDataProvider (fixes issue #0031020)
 SVN 53471@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -4615,6 +4615,7 @@ components/turbopower_ipro/languages/iputils.uk.po svneol=native#text/plain
 components/turbopower_ipro/languages/iputils.zh_CN.po svneol=native#text/plain
 components/turbopower_ipro/make_icons.bat svneol=native#text/plain
 components/turbopower_ipro/tipfiledataprovider.png -text svneol=unset#image/png
+components/turbopower_ipro/tiphtmldataprovider.png -text
 components/turbopower_ipro/tiphtmlpanel.png -text svneol=unset#image/png
 components/turbopower_ipro/tiphttpdataprovider.png -text svneol=unset#image/png
 components/turbopower_ipro/turbopoweripro.lpk svneol=native#text/pascal
