New form for Description/License.
 SVN 53472@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -3304,6 +3304,8 @@ components/onlinepackagemanager/opkman_mainfrm.pas svneol=native#text/pascal
 components/onlinepackagemanager/opkman_options.pas svneol=native#text/pascal
 components/onlinepackagemanager/opkman_optionsfrm.lfm svneol=native#text/plain
 components/onlinepackagemanager/opkman_optionsfrm.pas svneol=native#text/pascal
+components/onlinepackagemanager/opkman_packagedetailsfrm.lfm svneol=native#text/plain
+components/onlinepackagemanager/opkman_packagedetailsfrm.pas svneol=native#text/pascal
 components/onlinepackagemanager/opkman_packagelistfrm.lfm svneol=native#text/plain
 components/onlinepackagemanager/opkman_packagelistfrm.pas svneol=native#text/pascal
 components/onlinepackagemanager/opkman_progressfrm.lfm svneol=native#text/plain
