--- a/.gitattributes
+++ b/.gitattributes
@@ -3286,6 +3286,10 @@ components/onlinepackagemanager/images/Tree_Buttons/Info.png -text svneol=unset#
 components/onlinepackagemanager/images/Tree_Buttons/Ok.png -text svneol=unset#image/png
 components/onlinepackagemanager/images/Tree_Buttons/Refresh.png -text svneol=unset#image/png
 components/onlinepackagemanager/images/Tree_Buttons/Refresh1.png -text svneol=unset#image/png
+components/onlinepackagemanager/languages/opkman_VirtualTrees.po svneol=native#text/plain
+components/onlinepackagemanager/languages/opkman_const.po svneol=native#text/plain
+components/onlinepackagemanager/languages/opkman_httpclient.po svneol=native#text/plain
+components/onlinepackagemanager/languages/opkman_zip.po svneol=native#text/plain
 components/onlinepackagemanager/onlinepackagemanager.lpk svneol=native#text/plain
 components/onlinepackagemanager/onlinepackagemanager.lps svneol=native#text/plain
 components/onlinepackagemanager/onlinepackagemanager.pas svneol=native#text/pascal
