Opkman: Hungarian translation by Péter Gábor, bug 31035
 SVN 53481@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -3286,9 +3286,13 @@ components/onlinepackagemanager/images/Tree_Buttons/Info.png -text svneol=unset#
 components/onlinepackagemanager/images/Tree_Buttons/Ok.png -text svneol=unset#image/png
 components/onlinepackagemanager/images/Tree_Buttons/Refresh.png -text svneol=unset#image/png
 components/onlinepackagemanager/images/Tree_Buttons/Refresh1.png -text svneol=unset#image/png
+components/onlinepackagemanager/languages/opkman_VirtualTrees.hu.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_VirtualTrees.po svneol=native#text/plain
+components/onlinepackagemanager/languages/opkman_const.hu.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_const.po svneol=native#text/plain
+components/onlinepackagemanager/languages/opkman_httpclient.hu.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_httpclient.po svneol=native#text/plain
+components/onlinepackagemanager/languages/opkman_zip.hu.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_zip.po svneol=native#text/plain
 components/onlinepackagemanager/onlinepackagemanager.lpk svneol=native#text/plain
 components/onlinepackagemanager/onlinepackagemanager.lps svneol=native#text/plain
