--- a/.gitattributes
+++ b/.gitattributes
@@ -3325,6 +3325,7 @@ components/onlinepackagemanager/opkman_progressfrm.lfm svneol=native#text/plain
 components/onlinepackagemanager/opkman_progressfrm.pas svneol=native#text/pascal
 components/onlinepackagemanager/opkman_serializablepackages.pas svneol=native#text/pascal
 components/onlinepackagemanager/opkman_timer.pas svneol=native#text/pascal
+components/onlinepackagemanager/opkman_updates.pas svneol=native#text/pascal
 components/onlinepackagemanager/opkman_visualtree.pas svneol=native#text/pascal
 components/onlinepackagemanager/opkman_zipper.pas svneol=native#text/pascal
 components/onlinepackagemanager/vst/include/carbon/opkman_delphicompat.inc svneol=native#text/plain
