Bug fix. Translate category names in the tree, reported by Péter Gábor(#31038)
 SVN 53554@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -3291,7 +3291,7 @@ components/onlinepackagemanager/languages/opkman_VirtualTrees.hu.po svneol=nativ
 components/onlinepackagemanager/languages/opkman_VirtualTrees.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_const.de.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_const.es.po svneol=native#text/plain
-components/onlinepackagemanager/languages/opkman_const.fi.po -text svneol=native#text/plain
+components/onlinepackagemanager/languages/opkman_const.fi.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_const.hu.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_const.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_httpclient.fi.po -text svneol=native#text/plain
