Opkman httpclient: fixed typos, regenerated translations and added Russian translation
 SVN 53568@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -3294,9 +3294,10 @@ components/onlinepackagemanager/languages/opkman_const.es.po svneol=native#text/
 components/onlinepackagemanager/languages/opkman_const.fi.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_const.hu.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_const.po svneol=native#text/plain
-components/onlinepackagemanager/languages/opkman_httpclient.fi.po -text svneol=native#text/plain
+components/onlinepackagemanager/languages/opkman_httpclient.fi.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_httpclient.hu.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_httpclient.po svneol=native#text/plain
+components/onlinepackagemanager/languages/opkman_httpclient.ru.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_zip.fi.po -text svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_zip.hu.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_zip.po svneol=native#text/plain
