--- a/.gitattributes
+++ b/.gitattributes
@@ -7133,6 +7133,7 @@ lcl/include/customcombobox.inc svneol=native#text/pascal
 lcl/include/customcontrol.inc svneol=native#text/pascal
 lcl/include/customdbcombobox.inc svneol=native#text/pascal
 lcl/include/customdblistbox.inc svneol=native#text/pascal
+lcl/include/customdesigncontrol.inc svneol=native#text/pascal
 lcl/include/customdockform.inc svneol=native#text/pascal
 lcl/include/customedit.inc svneol=native#text/pascal
 lcl/include/customflowpanel.inc svneol=native#text/pascal
