--- a/.gitattributes
+++ b/.gitattributes
@@ -3287,9 +3287,10 @@ components/onlinepackagemanager/images/Tree_Buttons/Info.png -text svneol=unset#
 components/onlinepackagemanager/images/Tree_Buttons/Ok.png -text svneol=unset#image/png
 components/onlinepackagemanager/images/Tree_Buttons/Refresh.png -text svneol=unset#image/png
 components/onlinepackagemanager/images/Tree_Buttons/Refresh1.png -text svneol=unset#image/png
-components/onlinepackagemanager/languages/opkman_VirtualTrees.fi.po -text svneol=native#text/plain
+components/onlinepackagemanager/languages/opkman_VirtualTrees.fi.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_VirtualTrees.hu.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_VirtualTrees.po svneol=native#text/plain
+components/onlinepackagemanager/languages/opkman_VirtualTrees.ru.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_const.de.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_const.es.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_const.fi.po svneol=native#text/plain
