--- a/.gitattributes
+++ b/.gitattributes
@@ -3249,6 +3249,7 @@ components/onlinepackagemanager/images/ToolBar/Dis/04[!!-~]Update.png -text svne
 components/onlinepackagemanager/images/ToolBar/Dis/05[!!-~]CleanUp.png -text svneol=unset#image/png
 components/onlinepackagemanager/images/ToolBar/Dis/06[!!-~]Repository.png -text svneol=unset#image/png
 components/onlinepackagemanager/images/ToolBar/Dis/07[!!-~]Options.png -text svneol=unset#image/png
+components/onlinepackagemanager/images/ToolBar/Dis/08[!!-~]Help.png -text svneol=unset#image/png
 components/onlinepackagemanager/images/ToolBar/Nor/00[!!-~]Refresh.png -text svneol=unset#image/png
 components/onlinepackagemanager/images/ToolBar/Nor/01[!!-~]Filter.png -text svneol=unset#image/png
 components/onlinepackagemanager/images/ToolBar/Nor/02[!!-~]Download.png -text svneol=unset#image/png
@@ -3257,6 +3258,7 @@ components/onlinepackagemanager/images/ToolBar/Nor/04[!!-~]Update.png -text svne
 components/onlinepackagemanager/images/ToolBar/Nor/05[!!-~]CleanUp.png -text svneol=unset#image/png
 components/onlinepackagemanager/images/ToolBar/Nor/06[!!-~]Repository.png -text svneol=unset#image/png
 components/onlinepackagemanager/images/ToolBar/Nor/07[!!-~]Options.png -text svneol=unset#image/png
+components/onlinepackagemanager/images/ToolBar/Nor/08[!!-~]Help.png -text svneol=unset#image/png
 components/onlinepackagemanager/images/Tree_Buttons/00[!!-~]Repository.png -text svneol=unset#image/png
 components/onlinepackagemanager/images/Tree_Buttons/01[!!-~]PackageName.png -text svneol=unset#image/png
 components/onlinepackagemanager/images/Tree_Buttons/02[!!-~]PackageFile.png -text svneol=unset#image/png
