Opkman zip: fixed typo, removed unused string, regenerated translations and added Russian translation
 SVN 53606@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -3302,9 +3302,10 @@ components/onlinepackagemanager/languages/opkman_httpclient.fi.po svneol=native#
 components/onlinepackagemanager/languages/opkman_httpclient.hu.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_httpclient.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_httpclient.ru.po svneol=native#text/plain
-components/onlinepackagemanager/languages/opkman_zip.fi.po -text svneol=native#text/plain
+components/onlinepackagemanager/languages/opkman_zip.fi.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_zip.hu.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_zip.po svneol=native#text/plain
+components/onlinepackagemanager/languages/opkman_zip.ru.po svneol=native#text/plain
 components/onlinepackagemanager/onlinepackagemanager.lpk svneol=native#text/plain
 components/onlinepackagemanager/onlinepackagemanager.lps svneol=native#text/plain
 components/onlinepackagemanager/onlinepackagemanager.pas svneol=native#text/pascal
