Opkman: fixed typos, regenerated translations and added Russian translation
 SVN 53626@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -3298,6 +3298,7 @@ components/onlinepackagemanager/languages/opkman_const.es.po svneol=native#text/
 components/onlinepackagemanager/languages/opkman_const.fi.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_const.hu.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_const.po svneol=native#text/plain
+components/onlinepackagemanager/languages/opkman_const.ru.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_httpclient.fi.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_httpclient.hu.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_httpclient.po svneol=native#text/plain
