Generate JSON for updates(package maintainers webpage).
 SVN 53627@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -3316,6 +3316,8 @@ components/onlinepackagemanager/opkman_categoriesfrm.pas svneol=native#text/pasc
 components/onlinepackagemanager/opkman_common.pas svneol=native#text/pascal
 components/onlinepackagemanager/opkman_const.pas svneol=native#text/pascal
 components/onlinepackagemanager/opkman_contributors.txt svneol=native#text/plain
+components/onlinepackagemanager/opkman_createjsonforupdates.lfm svneol=native#text/plain
+components/onlinepackagemanager/opkman_createjsonforupdates.pas svneol=native#text/pascal
 components/onlinepackagemanager/opkman_createrepositorypackage.lfm svneol=native#text/plain
 components/onlinepackagemanager/opkman_createrepositorypackage.pas svneol=native#text/pascal
 components/onlinepackagemanager/opkman_downloader.pas svneol=native#text/pascal
