--- a/.gitattributes
+++ b/.gitattributes
@@ -1049,6 +1049,7 @@ components/codetools/tests/testctxmlfixfragments.pas svneol=native#text/pascal
 components/codetools/tests/testfinddeclaration.pas svneol=native#text/plain
 components/codetools/tests/testglobals.pas svneol=native#text/plain
 components/codetools/tests/testmethodjumptool.pas svneol=native#text/plain
+components/codetools/tests/testpascalparser.pas svneol=native#text/plain
 components/codetools/tests/testrefactoring.pas svneol=native#text/plain
 components/codetools/tests/teststdcodetools.pas svneol=native#text/plain
 components/codetools/unitdictionary.pas svneol=native#text/plain
