--- a/.gitattributes
+++ b/.gitattributes
@@ -3290,6 +3290,10 @@ components/onlinepackagemanager/images/Tree_Buttons/Info.png -text svneol=unset#
 components/onlinepackagemanager/images/Tree_Buttons/Ok.png -text svneol=unset#image/png
 components/onlinepackagemanager/images/Tree_Buttons/Refresh.png -text svneol=unset#image/png
 components/onlinepackagemanager/images/Tree_Buttons/Refresh1.png -text svneol=unset#image/png
+components/onlinepackagemanager/images/Tree_Buttons/StarEmpty.png -text svneol=unset#image/png
+components/onlinepackagemanager/images/Tree_Buttons/StarFull.png -text svneol=unset#image/png
+components/onlinepackagemanager/images/Tree_Buttons/StarFull_Blue.png -text svneol=unset#image/png
+components/onlinepackagemanager/images/Tree_Buttons/StarHalfFull.png -text svneol=unset#image/png
 components/onlinepackagemanager/languages/opkman_VirtualTrees.fi.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_VirtualTrees.hu.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_VirtualTrees.po svneol=native#text/plain
