make bigide: added lazcontroldsgn and datetimectrlsdsgn
 SVN 53701@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1173,10 +1173,13 @@ components/datetimectrls/datetimectrls.lpk svneol=native#text/plain
 components/datetimectrls/datetimectrls.pas svneol=native#text/pascal
 components/datetimectrls/datetimepicker.pas svneol=native#text/pascal
 components/datetimectrls/dbdatetimepicker.pas svneol=native#text/pascal
-components/datetimectrls/design/DateTimeCtrlsDsgn.lpk svneol=native#text/xml
-components/datetimectrls/design/DateTimeCtrlsDsgn.pas svneol=native#text/pascal
+components/datetimectrls/design/Makefile svneol=native#text/plain
+components/datetimectrls/design/Makefile.compiled svneol=native#text/plain
+components/datetimectrls/design/Makefile.fpc svneol=native#text/plain
 components/datetimectrls/design/datetimecontrolsreg.pas svneol=native#text/pascal
 components/datetimectrls/design/datetimectrls.lrs svneol=native#text/pascal
+components/datetimectrls/design/datetimectrlsdsgn.lpk svneol=native#text/xml
+components/datetimectrls/design/datetimectrlsdsgn.pas svneol=native#text/pascal
 components/datetimectrls/design/datetimepickerpropedit.pas svneol=native#text/pascal
 components/datetimectrls/lclcalwrapper.pas svneol=native#text/pascal
 components/datetimectrls/manual.htm svneol=native#text/plain
@@ -2274,6 +2277,9 @@ components/lazcontrols/Makefile svneol=native#text/plain
 components/lazcontrols/Makefile.compiled svneol=native#text/plain
 components/lazcontrols/Makefile.fpc svneol=native#text/plain
 components/lazcontrols/checkboxthemed.pas svneol=native#text/pascal
+components/lazcontrols/design/Makefile svneol=native#text/plain
+components/lazcontrols/design/Makefile.compiled svneol=native#text/plain
+components/lazcontrols/design/Makefile.fpc svneol=native#text/plain
 components/lazcontrols/design/lazcontroldsgn.lpk svneol=native#text/pascal
 components/lazcontrols/design/lazcontroldsgn.pas svneol=native#text/pascal
 components/lazcontrols/design/registerlazcontrols.pas svneol=native#text/pascal
