LCL: Move TLCLPlatform and related non-GUI code to a new unit to be used without GUI. Organize uses-sections by package so that dependencies can be easier seen.
 SVN 53711@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -7918,6 +7918,7 @@ lcl/lclclasses.pp svneol=native#text/pascal
 lcl/lclintf.pas svneol=native#text/pascal
 lcl/lclmemmanager.pas svneol=native#text/pascal
 lcl/lclmessageglue.pas svneol=native#text/pascal
+lcl/lclplatformdef.pas svneol=native#text/pascal
 lcl/lclproc.pas svneol=native#text/pascal
 lcl/lclrescache.pas svneol=native#text/pascal
 lcl/lclstrconsts.pas svneol=native#text/pascal
