--- a/.gitattributes
+++ b/.gitattributes
@@ -1878,6 +1878,7 @@ components/ideintf/docs/lazideintf.xml svneol=native#text/plain
 components/ideintf/docs/objectinspector.xml svneol=native#text/plain
 components/ideintf/docs/packageintf.xml svneol=native#text/plain
 components/ideintf/docs/projectintf.xml svneol=native#text/plain
+components/ideintf/editorsyntaxhighlighterdef.pas svneol=native#text/pascal
 components/ideintf/fieldseditor.lfm svneol=native#text/plain
 components/ideintf/fieldseditor.pas svneol=native#text/pascal
 components/ideintf/fieldslist.lfm svneol=native#text/plain
